--- a/src/ui/templates/TwoPaneLayout.module.css
+++ b/src/ui/templates/TwoPaneLayout.module.css
@@ -6,7 +6,6 @@
 
 .sidebar {
     background-color: rgba(33, 33, 33, 1);
-    padding: 32px;
     border-right: 1px solid rgba(66, 66, 66, 1);
 }
 
